--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,37 @@
 html{
     background-color: rgb(100, 77, 77);
 }
+
+ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: rgb(107, 61, 53);
+    width: 100%;
+    height: 100px;
+    margin: 0;
+    padding: 0;
+}
+
+.navContent{
+    font-size: 20px;
+    width: 200px;
+    background-color: rgb(107, 61, 53);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    text-align: center;
+    opacity: 1;
+    transition: 0.4s;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.navContent:hover{
+    opacity: 0.6;
+}
+
 #home1{
     background-color: rgb(65, 25, 18);
     border-radius: 40px;
@@ -9,7 +40,7 @@ html{
     height: 1000px;
     margin: 0 auto;
     position: relative;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 #img1{
@@ -20,7 +51,7 @@ html{
 #headerOutside{
     display: flex;
     margin: auto;
-    padding-top: 50px;
+    padding-top: 25px;
     padding-bottom: 70px;
     width: 400px;
     text-align: center;
