--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,10 @@ html{
     background-color: rgb(100, 77, 77);
 }
 
+body { 
+    margin: 0; 
+}
+
 ul{
     list-style-type: none;
     display: flex;
@@ -13,7 +17,12 @@ ul{
     margin: 0;
     padding: 0;
 }
-
+#navBar{
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
 .navContent{
     font-size: 20px;
     width: 200px;
@@ -32,15 +41,20 @@ ul{
     opacity: 0.6;
 }
 
+.navContent:focus{
+    opacity: 0.5;
+    outline: none;
+}
+
 #home1{
     background-color: rgb(65, 25, 18);
     border-radius: 40px;
     width: fit-content;
-    max-width: 700px;
+    width: 650px;
     height: 1000px;
     margin: 0 auto;
     position: relative;
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 #img1{
@@ -63,4 +77,16 @@ ul{
 
 #beerIcon{
     height: 65px;
+}
+
+#contactContent{
+    background-color: rgb(65, 25, 18);
+    border-radius: 40px;
+    width: fit-content;
+    width: 650px;
+    height: 1000px;
+    margin: 0 auto;
+    position: relative;
+    margin-top: 150px;
+    padding: 20px;
 }
