--- a/src/style.css
+++ b/src/style.css
@@ -40,10 +40,9 @@ ul{
 .navContent:hover{
     opacity: 0.6;
 }
-
-.navContent:focus{
-    opacity: 0.5;
-    outline: none;
+.active{
+    background-color: rgb(175, 141, 141);
+    color: white;
 }
 
 #home1{
@@ -65,7 +64,7 @@ ul{
 #headerOutside{
     display: flex;
     margin: auto;
-    padding-top: 25px;
+    padding-top: 50px;
     padding-bottom: 70px;
     width: 400px;
     text-align: center;
@@ -77,6 +76,8 @@ ul{
 
 #beerIcon{
     height: 65px;
+    transform: rotate(-45deg);
+    padding-left: 1px;
 }
 
 #contactContent{
@@ -89,4 +90,16 @@ ul{
     position: relative;
     margin-top: 150px;
     padding: 20px;
+}
+
+#img1{
+    margin-left: 25px;
+}
+
+#info1{
+    padding: auto;
+    color: rgb(207, 139, 100);
+    margin-top: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
